--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gemini-2.5-pro-api",
+  "name": "gemini-pro-vision-api",
   "version": "1.0.0",
-  "description": "Secure Express server for Gemini 2.5 Pro prompt generation",
+  "description": "Express server using Gemini Pro Vision (image + text support)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
